Quick fix + Removed some open whitespace

--- a/dashboard/static/css/main.css
+++ b/dashboard/static/css/main.css
@@ -93,6 +93,6 @@
 }
 
 .w-106 {
-    width: 28rem;
+    width: 32rem;
 }
 
